--- a/salon/templates/homepage.html
+++ b/salon/templates/homepage.html
@@ -51,7 +51,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#"><img height="50px" src ="http://localhost:8000/media/services_images/logo_moonlight.png"/></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -67,26 +67,23 @@
   
 <div class="container-fluid text-center">    
   <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-    </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome</h1>
+      <!-- <h1>Welcome</h1>
       <p>Welcome to My site ~~~!!!!</p>
       <hr>
       <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <p>Lorem ipsum...</p> -->
+      {% block content %}
+      {% endblock %}
     </div>
-    <div class="col-sm-2 sidenav">
+    <!-- <div class="col-sm-2 sidenav">
       <div class="well">
         <p>ADS</p>
       </div>
       <div class="well">
         <p>ADS</p>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
