--- a/salon/templates/programare.html
+++ b/salon/templates/programare.html
@@ -1,7 +1,8 @@
-
+{% extends "homepage.html" %}
+{% block content %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Rezervă</button>
 </form>
-
+{% endblock %}
