--- a/salon/templates/programare.html
+++ b/salon/templates/programare.html
@@ -1,6 +1,15 @@
 {% extends "homepage.html" %}
+
 {% block content %}
-<form method="post">
+{% if messages %}
+    <div>
+        {% for message in messages %}
+            <p><strong>{{ message }}</strong></p>
+        {% endfor %}
+    </div>
+{% endif %}
+
+<form method="post" id="formularRezervare">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Rezervă</button>
