Add services style, about page and modals.

--- a/salon/templates/programare.html
+++ b/salon/templates/programare.html
@@ -12,6 +12,7 @@
 <form method="post" id="formularRezervare">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Rezervă</button>
+    <button type="submit" class="btn btn-success">Rezervă</button>
+
 </form>
 {% endblock %}
