--- a/salon/templates/servicii.html
+++ b/salon/templates/servicii.html
@@ -1,71 +1,55 @@
-<!-- 
-<!DOCTYPE html>
-<html lang="en"> -->
-<!-- <head>
-    <meta charset="UTF-8">
-    <title>Serviciile Noastre</title>
-    <style>
-        .service-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            padding: 20px;
-        }
-        .service {
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 5px;
-            width: 100%;
-        }
-        .service img {
-            max-width: 100%;
-            height: auto;
-        }
-        .service h2 {
-            margin-top: 0;
-        }
-    
-        .promo {
-            color: red;
-        }
-    </style>
-</head> -->
-<!-- <body> -->
-
 {% extends "homepage.html" %}
 {% block content %}
     <div class="service-container">
         {% for serviciu in servicii %}
-        <div class="service{% if not serviciu.available %} not-available{% endif %}">
-            <!-- {% if serviciu.imagine %}
-            <img src="{{ serviciu.imagine.url }}" alt="Imagine pentru {{ serviciu.nume }}">
-            {% endif %} -->
-            <!-- <h2>{{ serviciu.nume }}</h2> -->
-            <!-- <div>{{ serviciu.descriere|safe }}</div>
-            <p>Durata: {{ serviciu.durata }}</p>
-            <p>Preț: {{ serviciu.pret }} lei</p>
-            <p>Categorie: {{ serviciu.categorie }}</p>
-            {% if serviciu.promotion %}
-            <p class="promo">Promoții/Reduceri: {{ serviciu.promotion }}</p>
-            {% endif %}
-            <p>Disponibil: {{ serviciu.available|yesno:"Da,Nu" }}</p> -->
-            
-
-
+        {% if serviciu.available %}
+        <div class="service not-available">
             <div class="card" style="width: 18rem;">
                 <img height="286px" class="card-img-top" src="{{ serviciu.imagine.url }}" alt="Imagine pentru {{ serviciu.nume }}">
                 <div class="card-body">
-                <h5 class="card-title">{{ serviciu.nume }}</h5>
-                <p class="card-text">{{ serviciu.descriere|safe }}</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title"><b>{{ serviciu.nume }}</b></h5>
+                <a href="#" class="btn btn-primary" onclick="showModal('{{ serviciu.nume|escapejs }}', '{{ serviciu.descriere|escapejs }}', '{{ serviciu.pret }}', '{{ serviciu.durata }}', '{{ serviciu.categorie|escapejs }}', '{{serviciu.promotion}}')">Detalii</a>
                 </div>
             </div>
+        {% else %}
+        <!-- <div>
+
+        </div> -->
+        <div class="service">
+            <div class="card" style="width: 18rem;">
+                <img loading="lazy" height="286px" class="card-img-top" src="{{ serviciu.imagine.url }}" alt="Imagine pentru {{ serviciu.nume }}">
+                <div class="card-body">
+                <h5 class="card-title"><b>{{ serviciu.nume }}</b></h5>
+                <span class="red-text">Momentan, acest serviciu nu este disponibil.</span>
+                </div>
+            </div>
+        {% endif %}
         
         </div>
         {% empty %}
         <p>Nu există servicii disponibile pentru afișare.</p>
         {% endfor %}
     </div>
+    <!-- Modal -->
+<div class="modal fade" id="descriereModal" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal-dialog" style="width:95vw;" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title service-title">Descrierea Serviciului</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Conținutul modalului va fi inserat aici din JavaScript -->
+            </div>
+            <div class="padding-btn">
+                <button onclick="goToPage('/programare')" type="button" class="btn btn-success btn-block"><b>Vreau programare</b></button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 <!-- </body> -->
 <!-- </html> -->
