--- a/salon/templates/servicii.html
+++ b/salon/templates/servicii.html
@@ -8,7 +8,7 @@
                 <img height="286px" class="card-img-top" src="{{ serviciu.imagine.url }}" alt="Imagine pentru {{ serviciu.nume }}">
                 <div class="card-body">
                 <h5 class="card-title"><b>{{ serviciu.nume }}</b></h5>
-                <a href="#" class="btn btn-primary" onclick="showModal('{{ serviciu.nume|escapejs }}', '{{ serviciu.descriere|escapejs }}', '{{ serviciu.pret }}', '{{ serviciu.durata }}', '{{ serviciu.categorie|escapejs }}', '{{serviciu.promotion}}')">Detalii</a>
+                <a href="#" class="btn btn-success" onclick="showModal('{{ serviciu.nume|escapejs }}', '{{ serviciu.descriere|escapejs }}', '{{ serviciu.pret }}', '{{ serviciu.durata }}', '{{ serviciu.categorie|escapejs }}', '{{serviciu.promotion}}')">Detalii</a>
                 </div>
             </div>
         {% else %}
@@ -44,7 +44,7 @@
                 <!-- Conținutul modalului va fi inserat aici din JavaScript -->
             </div>
             <div class="padding-btn">
-                <button onclick="goToPage('/programare')" type="button" class="btn btn-success btn-block"><b>Vreau programare</b></button>
+                <button onclick="goToPage('/programare')" type="button" class="btn btn-success btn-block"><b class="emboss-effect">Vreau programare</b></button>
             </div>
         </div>
     </div>
