--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2676,7 +2676,10 @@ label {
 
   content: '';
 
-  background: url("../img/border-shape.png") center center/cover;
+
+  
+
+  
 
   width: 82px;
 
@@ -2698,7 +2701,7 @@ label {
 
   content: '';
 
-  background: url("../img/pink-border-shape.png") center center/cover;
+
 
   width: 82px;
 
@@ -5764,9 +5767,7 @@ header {
 
     margin-bottom: 0; }
 
-    .video-area .title-heading::after {
 
-      background: url("../img/black-border-shape.png") center center/cover; }
 
 
 
@@ -8311,8 +8312,7 @@ ul.cat li a:hover {
 .subscribe-area {
 
   position: relative;
-
-  background: url("../img/subscribe-bg.png") no-repeat center center/cover; }
+}
 
   @media only screen and (min-width: 768px) and (max-width: 991px) {
 
@@ -8596,9 +8596,7 @@ ul.cat li a:hover {
 
 /*----------------------------------------*/
 
-.appointment-area.hp-1 {
 
-  background: url("../img/appointment-bg-01.png") center center/cover; }
 
 .appointment-area.style-3 {
 
