--- a/assets/scss/_appointment.scss
+++ b/assets/scss/_appointment.scss
@@ -3,7 +3,7 @@
 /*----------------------------------------*/
 .appointment-area {
     &.hp-1 {
-        background: url('../img/appointment-bg-01.png') center center / cover;
+        background: url('../img/subscribe-bg.png') center center / cover;
     }
     &.style-3{
         background: $white;
