--- a/assets/scss/_estend.scss
+++ b/assets/scss/_estend.scss
@@ -116,7 +116,7 @@
 %title-after-1{
     position: absolute;
     content: '';
-    background: url('../img/pink-border-shape.png') center center / cover;
+    background: url('../img/border-shape.png') center center / cover;
     width: 82px;
     height: 10px;
     transform: translateX(-50%);
