edited some html

--- a/salon/templates/homepage.html
+++ b/salon/templates/homepage.html
@@ -245,7 +245,7 @@
 
                                 <div class="about-heading">
 
-                                    <span class="small-title">MASAJE DE LUX</span>
+                                    <span class="small-title">Locatie in Cluj-Napoca</span>
 
                                     <h2>Revigorează-ți mintea, corpul și spiritul cu experiența unui masaj profesional.</h2>
 
